Narrow the module access failure to module exports, by ruling the rest out
The IllegalAccessError from the last round is about module membership: OptiFine's
SliderableValueSetInt is in module srg while the game interface it implements is in
module minecraft@1.20.4. No fix yet - what this round did is remove the other
explanations, each by measurement.

Our jar is not in FML's 'Found mod file' list, but neither is it on the verified
1.21.4 line, which works with OptiFineTransformer: Targets: 474. The manifest is not
it either: the original OptiFine jar and both combined jars all say
Automatic-Module-Name: optifine, while the error names module srg - which is the name
of the jar's union root directory, since SecureJar treats srg/ as a package root. The
mods folder holds only our jar, so no stale copy is involved. And it is not peculiar to
1.20.4: all four OptiFine builds carry that class and all four patch the interface
itself, so the difference is only that this line now really applies the patches and
therefore executes the path for the first time.

ModLauncher's public API cannot add the export: IModuleLayerManager exposes only
getLayer, and ModuleLayerHandler is a package-private record of layer and cl
with no ModuleLayer.Controller, so addExports is out of reach; --add-exports only
affects the boot layer's resolution, not the GAME layer ModLauncher builds.

Next candidates, in order: reflect the layer's private controller field and add the
export ourselves, find what makes FML export game packages to a module, or move the
finished classes into a module FML does export to.